--- a/node1.yaml
+++ b/node1.yaml
@@ -20,4 +20,5 @@ metadata:
     kubernetes.io/os: linux
     node-role.kubernetes.io/worker: ""
     node.openshift.io/os_id: rhcos
+    test: label
   name: worker-0.jyotest.lab.psi.pnq2.redhat.com
