--- a/node1.yaml
+++ b/node1.yaml
@@ -2,24 +2,31 @@ apiVersion: v1
 kind: Node
 metadata:
   annotations:
+    alpha.kubernetes.io/provided-node-ip: 10.38.247.101
+    csi.volume.kubernetes.io/nodeid: '{"csi.vsphere.vmware.com":"ci-ln-hh15w82-c1627-t5lmd-worker-9hrv7"}'
+    k8s.ovn.org/host-addresses: '["10.38.247.101","fd65:a1a8:60ad:1237:3a4d:4ae8:bb9a:4d5c","fd65:a1a8:60ad:1237::62"]'
+    k8s.ovn.org/l3-gateway-config: '{"default":{"mode":"shared","interface-id":"br-ex_ci-ln-hh15w82-c1627-t5lmd-worker-9hrv7","mac-address":"00:50:56:85:51:e0","ip-addresses":["10.38.247.101/25"],"ip-address":"10.38.247.101/25","next-hops":["10.38.247.1"],"next-hop":"10.38.247.1","node-port-enable":"true","vlan-id":"0"}}'
+    k8s.ovn.org/node-chassis-id: 3a1d38c7-b55e-4d28-9354-e550c1310aeb
+    k8s.ovn.org/node-gateway-router-lrp-ifaddr: '{"ipv4":"100.64.0.7/16"}'
+    k8s.ovn.org/node-mgmt-port-mac-address: b2:d0:79:6d:ca:e4
+    k8s.ovn.org/node-primary-ifaddr: '{"ipv4":"10.38.247.101/25"}'
+    k8s.ovn.org/node-subnets: '{"default":"10.129.2.0/23"}'
+    machine.openshift.io/machine: openshift-machine-api/ci-ln-hh15w82-c1627-t5lmd-worker-9hrv7
     machineconfiguration.openshift.io/controlPlaneTopology: HighlyAvailable
-    machineconfiguration.openshift.io/currentConfig: rendered-worker-0b2ec56c75d42063ffd98642326857df
-    machineconfiguration.openshift.io/desiredConfig: rendered-worker-0b2ec56c75d42063ffd98642326857df
-    machineconfiguration.openshift.io/desiredDrain: uncordon-rendered-worker-0b2ec56c75d42063ffd98642326857df
-    machineconfiguration.openshift.io/lastAppliedDrain: uncordon-rendered-worker-0b2ec56c75d42063ffd98642326857df
-    machineconfiguration.openshift.io/lastSyncedControllerConfigResourceVersion: "413244"
+    machineconfiguration.openshift.io/currentConfig: rendered-worker-33a9125da12caebff1fcdc2234354d10
+    machineconfiguration.openshift.io/desiredConfig: rendered-worker-33a9125da12caebff1fcdc2234354d10
+    machineconfiguration.openshift.io/desiredDrain: uncordon-rendered-worker-33a9125da12caebff1fcdc2234354d10
+    machineconfiguration.openshift.io/lastAppliedDrain: uncordon-rendered-worker-33a9125da12caebff1fcdc2234354d10
     machineconfiguration.openshift.io/reason: ""
     machineconfiguration.openshift.io/state: Done
     volumes.kubernetes.io/controller-managed-attach-detach: "true"
-  creationTimestamp: "2023-12-21T10:03:08Z"
   labels:
     beta.kubernetes.io/arch: amd64
     beta.kubernetes.io/os: linux
     kubernetes.io/arch: amd64
-    kubernetes.io/hostname: ip-10-0-241-80.us-east-2.compute.internal
+    kubernetes.io/hostname: ci-ln-hh15w82-c1627-t5lmd-worker-9hrv7
     kubernetes.io/os: linux
     node-role.kubernetes.io/worker: ""
     node.openshift.io/os_id: rhcos
-    test: label
-    label: value
-  name: ip-10-0-241-80.us-east-2.compute.internal
+    test: label1
+  name: ci-ln-hh15w82-c1627-t5lmd-worker-9hrv7
